# beyond-click-sim

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture_note.md  cold_start_spec.md  final_results.md  in_distribution_scenarios.md  issues.md  litellm_config.yaml  llm_model_plan.md  notes.md  positional_bias_note.md  pyproject.toml  todo.md  vllm_start_mbz_instruction.md
memorization/: README.md  baselines.py  common.py  make_table.py  metrics.py  prepare_data.py  prompts.py  rescore.py  run_classical.py  run_llm.py  splits.py  tune_baselines.py
notebooks/: compare_popularity_llm_eval1000.ipynb  compare_regression_mean_eval1000.ipynb  eda_ml1m.ipynb  eda_steam.ipynb  inspect_agent4rec_final_prompts.ipynb  inspect_alignment_interaction_tasks.ipynb  inspect_cold_start.ipynb  inspect_llm_alignment_ollama_e2e.ipynb  inspect_llm_interaction_yes_no_scorer.ipynb  inspect_popularity_alignment_e2e.ipynb  listwise.ipynb  llm_metric_stability.ipynb  policy_ranking_agreement.ipynb  popularity_metrics_report.ipynb  steam_duplicates_eda.ipynb  test.ipynb
scripts/: AGENTS.md  COLD_START_POD_QUEUE_RUNBOOK.md  README.md  deploy_cluster.sh  deploy_pod.sh  install.sh  litellm_config.yaml  local_to_pod_litellm_config.yaml  model_complete_check.sh  port_forward.sh  run_cold_start_pod_queue.py  run_litellm.sh  run_llm.sh  run_openp5_style_qwen_matrix.sh  run_steam_qwen_matrix.sh  run_unified_proxy.sh  teardown_cluster.sh  verify_cluster.sh
tests/: test_agent4rec_profiles.py  test_agent4rec_regression_runner.py  test_agent4rec_regressor.py  test_agent4rec_yes_no_cold_start_runner.py  test_agent4rec_yes_no_policy_ranking_runner.py  test_agent4rec_yes_no_runner.py  test_agent4rec_yes_no_scorer.py  test_alignment_task_builder.py  test_binary_evaluation.py  test_classical_runner.py  test_classical_scorers.py  test_cold_start_splitter.py  test_constant_regressors.py  test_filters.py  (+43 more)
(+1386 files in other folders)
