[project]
name = "beyond-click-sim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Artem Agafonov", email = "agafonov.artem98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "implicit>=0.7.2",
    "openai>=2.9.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.0.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "pytest>=9.0.3",
]
